# django-lucus

./: .gitignore  MANIFEST.in  README.md  README.ru.md  pyproject.toml
lucus/: README.md  __init__.py  admin_list_patch.py  apps.py  context_processors.py  dashboard.py  inlines.py  models.py  sidebar.py  sites_panel.py  theme.py  views.py
lucus/locale/ru/LC_MESSAGES/: django.po
lucus/migrations/: 0001_initial.py
lucus/static/admin/js/: unusable_password_field.js
lucus/static/lucus/css/: catppuccin.css  github.css  grey.css  lucus-admin.css  lucus-after-extrastyle.css  nord.css  olivia.css  style.css
lucus/static/lucus/css/schemes/: dracula.css  dune.css  midnight.css  olivia.css  slate.css  tokyo.css
lucus/static/lucus/js/: lucus-appearance.js  lucus-changelist-actions.js  lucus-clean-input-types.js  lucus-inline-placeholders.js  lucus-mobile-nav.js  lucus-side-dashboard-nav.js  lucus-sortable-inlines.js  lucus-ui.js
lucus/templates/admin/: 404.html  500.html  actions.html  app_index.html  base.html  change_form.html  change_list.html  change_list_results.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  invalid_setup.html  login.html  object_history.html  pagination.html  search_form.html
lucus/templates/admin/auth/user/: change_password.html
lucus/templates/admin/edit_inline/: tabular.html
lucus/templates/admin/includes/: fieldset.html  lucus_mobile_menu_settings.html  lucus_mobile_nav_panel.html  lucus_side_dashboard_nav.html
lucus/templates/log_viewer/: logfile_viewer.html
lucus/templates/registration/: logged_out.html  password_change_done.html  password_change_form.html
lucus/templates/rosetta/: base.html  file-list.html  form.html
lucus/templatetags/: __init__.py  lucus_inlines.py  lucus_nav.py
