[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Только метаданные пакета lucus для PyPI / python -m build.
# Песочница интеграций: optional-dependencies «integration» и requirements-integration.txt.

[project]
name = "django-lucus"
version = "0.1.8"
description = "Lucus enhances Django Admin with custom templates, static theming, and a multi-column dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Rockdukan" }]
keywords = ["django", "admin", "dashboard", "templates", "static"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=5.2,<7",
]

[project.optional-dependencies]
integration = [
    "celery",
    "redis",
    "django-celery-beat",
    "django-celery-results",
    "django-dynamic-preferences",
    "django-extensions",
    "django-health-check",
    "django-import-export",
    "django-modeltranslation",
    "django-reversion",
    "django-reversion-compare",
    "django-silk",
    "django-attachments",
    "python-fsutil",
    "python-fontbro",
    "django-cabinet",
    "Pillow",
    "django-imagekit",
    "sorl-thumbnail",
    "easy-thumbnails",
    "django-pictures",
    "django-versatileimagefield",
    "django-thumbnails",
    "django-lazy-srcset",
    "django-photologue",
    "django-sortedm2m",
    "django-starcross-gallery",
    "django-galleryfield",
    "django-ckeditor",
    "django-easy-select2",
    "django-ckeditor-5",
    "django-prose-editor",
    "nh3",
    "django-tinymce",
    "martor",
    "django-markdownx",
    "django-froala-editor",
    "sentry-sdk",
]

[project.urls]
Homepage = "https://github.com/Rockdukan/django-lucus"
Repository = "https://github.com/Rockdukan/django-lucus"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
# ``include = ["lucus"]`` omits subpackages — wheels lacked ``lucus.templatetags`` (``lucus_nav``) and ``lucus.migrations``.
include = ["lucus*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.package-data]
lucus = [
    "templates/**/*.html",
    "static/**/*.css",
    "static/**/*.js",
    "static/**/*",
    "locale/**/*.po",
    "locale/**/*.mo",
    "migrations/*.py",
]
